@@ -24,3 +24,5 @@ Carlos Schlyter - Portugese
 andriykopanytsia - Ukranian
 intel - Hungarian
 H Vanek - Czech
+jipanos - Spanish
+Erik Fdevriendt - Dutch
