@@ -1,4 +1,6 @@
  * Updated Russian translations from I Nedoboy
+ * New Spanish translations from jipanos
+ * New Dutch translations Erik Fdevriendt
 
 KeePassDroid (1.9.16)
  * Updated Hungarian translations from intel
